# backup-kitsune-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  local.env  local.env.example  pyproject.toml  requirements.txt
.azdo/: azdo-ci-pipeline.yaml  azdo-pipeline-destory.yaml  azdo-pipeline.yaml  operation-pipeline.yaml
.azdo/scripts/: generate_access_token.sh
.azdo/templates/: cd-jobs.yaml  ci-jobs.yaml  fhir-add-search-parameters.yaml  operations.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: auto_assign.yml
artifact/: image_base64
docker/: Dockerfile
integtest/: characters.py  conftest.py  utils.py
integtest/blueprints/: characters.py  fhir_input_constants.py  helper.py  test_accounts.py  test_book_appointments.py  test_claims.py  test_create_and_get_practitioner_roles.py  test_create_document_references.py  test_create_encounter.py  test_create_medication_requests.py  test_create_patient.py  test_create_practitioner.py  test_diagnostic_reports.py  test_get_patients.py  test_get_practitioner.py  test_get_practitioner_slots.py  test_lineup.py  test_orca.py  test_payments.py  test_practitioner_role_can_be_updated.py  (+5 more)
notion/: README.md  user-status-table-dev.json  user-status-table-prod.json  user-status-table-stg.json
scripts/: README.md  assign_user_role.py  bind_orca_id.py  delete_users.py
secrets/: stripe_key
src/: Dockerfile  app.py  fhir_proxy.py  get_zoom_jwt.py  gunicorn.conf.py  json_serialize.py  middleware.py  organizations.py
tests/: test_middleware.py  test_role_auth.py  test_sample.py
(+1105 files in other folders)
