[tool.poetry]
name = "kitsune-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
PyJWT = "^2.1.0"
firebase-admin = "^5.0.1"
"fhir.resources" = "^6.1.0"
stripe = "^2.60.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest_bdd = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
