[tool.poetry]
name = "kitsune-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
PyJWT = "^2.4.0"
firebase-admin = "^5.0.1"
"fhir.resources" = "^6.1.0"
stripe = "^2.60.0"
Flask-Cors = "^3.0.10"
pytz = "^2021.3"
python-dateutil = "^2.8.2"
twilio = "^7.12.0"
google-cloud = "^0.34.0"
pandas = "^1.4.3"
notion-client = "^1.0.0"
setuptools = "65.5.1"
cryptography = "^39.0.1"
fhir-resources = "6.1.0"
flask = "2.0.2"
werkzeug = "2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest_bdd = "^4.1.0"
pytest-azurepipelines = "^0.8.0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.3.0"
pytest-rerunfailures = "^10.2.0"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
